tests/snapshots/corpus__高知大学合宿研修施設使用規則@高知大学合宿研修施設使用規則.pdf.snap
---
source: tests/corpus.rs
expression: doc
input_file: sources/高知大学合宿研修施設使用規則.pdf
---
{
  "title": "高知大学合宿研修施設使用規則",
  "enacted": "平成16年４月１日 規則第156号",
  "last_amended": "最終改正  令和３年９月10日規則第20号",
  "body": [
    {
      "type": "article",
      "number": {
        "article": 1,
        "branch": null
      },
      "title": "趣旨",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則は、高知大学課外活動施設管理運営規則第４条の規定に基づき、高知大学合宿研修施設（以下「合宿研修施設」という｡）の使用に関し必要な事項を定める。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 2,
        "branch": null
      },
      "title": "使用・範囲",
      "paragraphs": [
        {
          "number": 1,
          "text": "合宿研修施設は、本学が企画する行事又は本学が認める学生団体の研修の場として使用するものであって、使用の範囲は、次に定める。",
          "items": [
            {
              "number": 1,
              "text": "本学の企画する行事に関連して行う合宿"
            },
            {
              "number": 2,
              "text": "本学の学生の課外活動のために行う合宿"
            },
            {
              "number": 3,
              "text": "その他特に理事（教育担当）が必要と認めた場合"
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 3,
        "branch": null
      },
      "title": "使用手続",
      "paragraphs": [
        {
          "number": 1,
          "text": "合宿研修施設を使用する課外活動団体の責任者（以下「責任者」という。）は、使用開始の10日前までに所定の様式により学長に願い出て、許可を得なければならない。",
          "items": []
        },
        {
          "number": 2,
          "text": "前項の許可は、原則として申込順とする。ただし、状況により調整することがある。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 4,
        "branch": null
      },
      "title": "使用期間及び鍵の授受",
      "paragraphs": [
        {
          "number": 1,
          "text": "合宿研修施設の使用期間は、原則として１回につき７日以内とする。",
          "items": []
        },
        {
          "number": 2,
          "text": "責任者は、鍵を使用当日の午後４時までに学務部学生支援課から受け取り、使用最終日の午後３時までに学務部学生支援課に返却しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 5,
        "branch": null
      },
      "title": "使用心得",
      "paragraphs": [
        {
          "number": 1,
          "text": "合宿研修施設を使用する者は、次の各号に掲げる事項を遵守しなければならない。",
          "items": [
            {
              "number": 1,
              "text": "使用目的以外の用途に使用しないこと。"
            },
            {
              "number": 2,
              "text": "使用時間を厳守すること。"
            },
            {
              "number": 3,
              "text": "建物及び備付物品を損傷しないこと。"
            },
            {
              "number": 4,
              "text": "火気に特に注意し、所定の場所以外の熱器具等の使用及び喫煙をしないこと。"
            },
            {
              "number": 5,
              "text": "整理整頓に心掛け、朝夕必ず清掃すること。"
            },
            {
              "number": 6,
              "text": "盗難に留意し、全員不在となるときは、戸締りを厳重にすること。"
            },
            {
              "number": 7,
              "text": "その他係員の指示事項を厳守すること。"
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 6,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "責任者は、合宿日誌に所定の事項を記入しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 7,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則に違反した場合には、その使用を中止させることがある。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 8,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "責任者は、合宿終了後その旨を学務部学生支援課に連絡し、建物及び備付物品の点検を受け、合宿日誌を提出し、借用の用具を返還しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 9,
        "branch": null
      },
      "title": "損害賠償",
      "paragraphs": [
        {
          "number": 1,
          "text": "使用者が施設、器具等を故意又は過失により滅失又は毀損した場合は、本学の指示に従って速やかに修理し、又は本学の認定した額を賠償しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 10,
        "branch": null
      },
      "title": "事務",
      "paragraphs": [
        {
          "number": 1,
          "text": "合宿研修施設に関する事務は、学務部学生支援課が行う。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 11,
        "branch": null
      },
      "title": "雑則",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則に定めるもののほか、合宿研修施設の使用に関し必要な事項については、理事（教育担当）が定める。",
          "items": []
        }
      ]
    }
  ],
  "supplementary_provisions": [
    {
      "ordinal": 1,
      "heading_raw": "附  則",
      "raw_text": "この規則は、平成16年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 2,
      "heading_raw": "附  則（平成17年７月１日規則第545号）",
      "raw_text": "この規則は、平成17年７月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 3,
      "heading_raw": "附  則（平成28年３月23日規則第118号）",
      "raw_text": "この規則は、平成28年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 4,
      "heading_raw": "附  則（平成30年３月28日規則第86号）",
      "raw_text": "この規則は、平成30年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 5,
      "heading_raw": "附  則（平成31年３月27日規則第100号）",
      "raw_text": "この規則は、平成31年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 6,
      "heading_raw": "附  則（平成31年４月26日規則第15号）",
      "raw_text": "この規則は、令和元年５月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 7,
      "heading_raw": "附  則（令和３年９月10日規則第20号）",
      "raw_text": "この規則は、令和３年 10 月１日から施行する。",
      "references_tables": []
    }
  ],
  "appended_tables": []
}
