tests/snapshots/corpus__高知大学国際交流会館料金規則@高知大学国際交流会館料金規則.pdf.snap
---
source: tests/corpus.rs
expression: doc
input_file: sources/高知大学国際交流会館料金規則.pdf
---
{
  "title": "高知大学国際交流会館料金規則",
  "enacted": "平成16年４月１日 規則第152号",
  "last_amended": "",
  "body": [
    {
      "type": "article",
      "number": {
        "article": 1,
        "branch": null
      },
      "title": "趣旨",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則は、高知大学国際交流会館規則第10条第１項及び第３項の規定に基づき、高知大学国際交流会館の寄宿料、使用料の額及びその徴収方法並びに雑費の負担に関し必要な事項を定める。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 2,
        "branch": null
      },
      "title": "寄宿料の額",
      "paragraphs": [
        {
          "number": 1,
          "text": "外国人留学生の寄宿料の額は、国立大学法人高知大学における授業料等費用に関する規則の定めるところによる。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 3,
        "branch": null
      },
      "title": "寄宿料の徴収方法",
      "paragraphs": [
        {
          "number": 1,
          "text": "前条に規定する寄宿料は、毎月所定の日までに納入しなければならない。",
          "items": []
        },
        {
          "number": 2,
          "text": "寄宿料は、入居又は退去の日が月の途中である場合にあっても、１か月の全額を納入しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 4,
        "branch": null
      },
      "title": "使用料の額",
      "paragraphs": [
        {
          "number": 1,
          "text": "外国人研究者の使用料の額は、別に定める。",
          "items": []
        },
        {
          "number": 2,
          "text": "月の途中において入居又は退去する場合、当該月の使用料の額は、前項に規定する日額にその入居許可日数（入居許可期間の初日及び退去の日は、それぞれ１日として計算する。）を乗じて得た額とする。",
          "items": []
        },
        {
          "number": 3,
          "text": "既納の使用料は、還付しない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 5,
        "branch": null
      },
      "title": "使用料の徴収方法",
      "paragraphs": [
        {
          "number": 1,
          "text": "入居期間が１か月以上の場合の使用料は、毎月所定の日までに納付しなければならない。ただし、入居又は退去の日が月の途中である場合の使用料は、入居の場合は月末までに、退去の場合は退去の前日までに納付しなければならない。",
          "items": []
        },
        {
          "number": 2,
          "text": "入居期間が１か月に満たない場合の使用料は、使用開始前に納付しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 6,
        "branch": null
      },
      "title": "雑費",
      "paragraphs": [
        {
          "number": 1,
          "text": "入居者が使用する光熱水料及びその他生活に要する経費（以下「光熱水料等」という。）は、その実費を負担しなければならない。",
          "items": []
        }
      ]
    }
  ],
  "supplementary_provisions": [
    {
      "ordinal": 1,
      "heading_raw": "附  則",
      "raw_text": "この規則は、平成16年４月１日から施行する。",
      "references_tables": []
    }
  ],
  "appended_tables": []
}
