tests/snapshots/corpus__高知大学国際交流会館規則@高知大学国際交流会館規則.pdf.snap
---
source: tests/corpus.rs
expression: doc
input_file: sources/高知大学国際交流会館規則.pdf
---
{
  "title": "高知大学国際交流会館規則",
  "enacted": "平成16年４月１日 規則第151号",
  "last_amended": "最終改正  令和８年３月27日規則第127号",
  "body": [
    {
      "type": "article",
      "number": {
        "article": 1,
        "branch": null
      },
      "title": "趣旨",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則は、高知大学学則第84条第２項の規定に基づき、高知大学国際交流会館（以下「会館」という。）の管理運営に関し必要な事項を定める。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 2,
        "branch": null
      },
      "title": "目的",
      "paragraphs": [
        {
          "number": 1,
          "text": "会館は、外国人留学生（愛媛大学大学院連合農学研究科学生のうち、高知大学教員を主指導教員として配属された者を含む。以下同じ。）及び外国人研究者（以下「留学生等」という。）に宿舎を提供し、高知大学（以下「本学」という。）の教育、学術及び文化に係る国際交流の促進に寄与することを目的とする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 3,
        "branch": null
      },
      "title": "職員",
      "paragraphs": [
        {
          "number": 1,
          "text": "会館に次の職員を置く。",
          "items": [
            {
              "number": 1,
              "text": "館長"
            },
            {
              "number": 2,
              "text": "会館主事  ２人"
            },
            {
              "number": 3,
              "text": "その他館長が必要と認める職員"
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 4,
        "branch": null
      },
      "title": "館長",
      "paragraphs": [
        {
          "number": 1,
          "text": "館長は、副学長（国際教育担当）をもって充てる。",
          "items": []
        },
        {
          "number": 2,
          "text": "館長は、会館の業務を掌理する。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 5,
        "branch": null
      },
      "title": "会館主事",
      "paragraphs": [
        {
          "number": 1,
          "text": "会館主事は、本学の教員のうちから学長が任命する。",
          "items": []
        },
        {
          "number": 2,
          "text": "会館主事は、居住する留学生等の生活上の諸問題について指導又は助言を行い、館長を補佐する。",
          "items": []
        },
        {
          "number": 3,
          "text": "会館主事の任期は、２年とし、再任を妨げない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 6,
        "branch": null
      },
      "title": "管理運営",
      "paragraphs": [
        {
          "number": 1,
          "text": "会館の管理運営に関する重要事項については、高知大学国際連携推進委員会で審議する。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 7,
        "branch": null
      },
      "title": "入居資格",
      "paragraphs": [
        {
          "number": 1,
          "text": "会館に入居できる者は、次の各号の一に該当する者とする。",
          "items": [
            {
              "number": 1,
              "text": "本学に在学する外国人留学生及びその家族"
            },
            {
              "number": 2,
              "text": "本学において教育研究に従事する外国人研究者及びその家族"
            },
            {
              "number": 3,
              "text": "その他館長が適当と認めた者"
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 8,
        "branch": null
      },
      "title": "入居許可等",
      "paragraphs": [
        {
          "number": 1,
          "text": "会館に入居を希望する者は、所定の入居許可申請書（別記様式第１号）に本学が指定する書類を添えて館長に提出し、その許可を受けなければならない。",
          "items": []
        },
        {
          "number": 2,
          "text": "入居の許可は、選考の上、館長が行う。",
          "items": []
        },
        {
          "number": 3,
          "text": "入居の許可を受けた者は、所定の期日までに入居の手続をしなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 9,
        "branch": null
      },
      "title": "入居期間",
      "paragraphs": [
        {
          "number": 1,
          "text": "会館に入居することのできる期間（以下「入居期間」という。）は、１年以内とする。ただし、教育研究上特に必要がある場合は、入居期間の延長を許可することがある。",
          "items": []
        },
        {
          "number": 2,
          "text": "入居期間の延長の許可を受けようとする者は、入居期間の満了する日の１か月前までに入居期間延長申請書（別記様式第２号）を館長に提出し、その許可を受けなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 10,
        "branch": null
      },
      "title": "寄宿料及び使用料等",
      "paragraphs": [
        {
          "number": 1,
          "text": "入居を許可された者（以下「入居者」という。）は、別に定めるところにより、外国人留学生にあっては寄宿料を、外国人研究者にあっては使用料を、それぞれ所定の期日までに納入しなければならない。",
          "items": []
        },
        {
          "number": 2,
          "text": "既納の寄宿料又は使用料は、還付しない。",
          "items": []
        },
        {
          "number": 3,
          "text": "入居者は、寄宿料又は使用料のほか、光熱水料その他別に定める雑費を負担するものとし、これを所定の期日までに納入しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 11,
        "branch": null
      },
      "title": "使用上の注意",
      "paragraphs": [
        {
          "number": 1,
          "text": "入居者及び同居家族は、会館の施設、設備及び備品等を常に正常な状態に保全することに留意しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 12,
        "branch": null
      },
      "title": "遵守事項",
      "paragraphs": [
        {
          "number": 1,
          "text": "入居者は、会館の施設等を使用するに当っては、次の各号に掲げる事項を遵守しなければならない。",
          "items": [
            {
              "number": 1,
              "text": "居室の全部又は一部を入居を許可された者以外の者に貸与しないこと。"
            },
            {
              "number": 2,
              "text": "居室に入居を許可された者以外の者を宿泊させないこと。"
            },
            {
              "number": 3,
              "text": "その他会館の施設等を許可された目的以外に使用しないこと。"
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 13,
        "branch": null
      },
      "title": "損害賠償",
      "paragraphs": [
        {
          "number": 1,
          "text": "入居者は、入居者本人又は同居家族が故意又は過失により会館の施設、設備及び備品を破損、滅失又は汚損したときは、速やかに館長に届けるとともに、館長の指示により遅滞なくこれを原状に回復し、又はその損害を賠償しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 14,
        "branch": null
      },
      "title": "入居許可の取消し",
      "paragraphs": [
        {
          "number": 1,
          "text": "館長は、入居者が次の各号の一に該当したときは、入居の許可を取り消すことができる。",
          "items": [
            {
              "number": 1,
              "text": "許可された入居期間中に、第７条に定める入居資格を失ったとき。"
            },
            {
              "number": 2,
              "text": "第10条に定める寄宿料又は使用料及び光熱水料その他雑費を滞納し、督促を受けてもなお納入しないとき。"
            },
            {
              "number": 3,
              "text": "第12条に規定する遵守事項に違反したとき。"
            },
            {
              "number": 4,
              "text": "前条に定める義務を履行しないとき。"
            },
            {
              "number": 5,
              "text": "その他会館の管理運営に重大な支障を与えるとき、又は与えるおそれのあるとき。"
            }
          ]
        },
        {
          "number": 2,
          "text": "前項の規定により許可を取り消された場合に入居者が被る損失については、本学はその責を負わないものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 15,
        "branch": null
      },
      "title": "退去",
      "paragraphs": [
        {
          "number": 1,
          "text": "入居者が次の各号の一に該当するときは、速やかに会館から退去しなければならない。",
          "items": [
            {
              "number": 1,
              "text": "入居許可期間が満了したとき。"
            },
            {
              "number": 2,
              "text": "前条第１項の規定に該当し、入居の許可が取り消されたとき。"
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 16,
        "branch": null
      },
      "title": "退去手続",
      "paragraphs": [
        {
          "number": 1,
          "text": "入居者が会館を退去するときは、所定の退去届（別記様式第３号）を館長に提出するものとする。ただし、入居の許可を取り消された者にあっては、この限りでない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 17,
        "branch": null
      },
      "title": "事務",
      "paragraphs": [
        {
          "number": 1,
          "text": "会館に関する事務は、総務部物部総務課、学務部国際教育支援室及び医学部・病院事務部学生課において処理する。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 18,
        "branch": null
      },
      "title": "雑則",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則に定めるもののほか、会館の管理運営及び使用に関し必要な事項は、館長が別に定める。",
          "items": []
        }
      ]
    }
  ],
  "supplementary_provisions": [
    {
      "ordinal": 1,
      "heading_raw": "附  則",
      "raw_text": "この規則は、平成16年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 2,
      "heading_raw": "附  則",
      "raw_text": "この規則は、平成17年７月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 3,
      "heading_raw": "附  則（平成 18 年７月 12 日規則第 17 号）",
      "raw_text": "この規則は、平成18年７月12日から施行し、平成18年４月１日から適用する。",
      "references_tables": []
    },
    {
      "ordinal": 4,
      "heading_raw": "附  則（平成 22 年３月 31 日規則第 124 号）",
      "raw_text": "この規則は、平成22年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 5,
      "heading_raw": "附  則（平成25年３月11日規則第91号）",
      "raw_text": "この規則は、平成25年３月11日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 6,
      "heading_raw": "附  則（平成26年３月31日規則第115号）",
      "raw_text": "この規則は、平成26年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 7,
      "heading_raw": "附  則（平成29年３月29日規則第103号）",
      "raw_text": "この規則は、平成29年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 8,
      "heading_raw": "附  則（令和３年９月10日規則第20号）",
      "raw_text": "この規則は、令和３年10月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 9,
      "heading_raw": "附  則（令和４年３月28日規則第101号）",
      "raw_text": "この規則は、令和４年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 10,
      "heading_raw": "附  則（令和４年10月３日規則第55号）",
      "raw_text": "この規則は、令和４年10月３日から施行し、令和４年10月１日から適用する。",
      "references_tables": []
    },
    {
      "ordinal": 11,
      "heading_raw": "附  則（令和８年３月27日規則第127号）",
      "raw_text": "この規則は、令和８年４月１日から施行する。\n別記様式第１号（第８条関係）\n（Form １） 入居許可申請書\nAPPLICATION  FOR  RESIDENCE\n日付：    年   月   日\nDate：     Year  Month  Day\n高知大学国際交流会館長  殿\nTo：House Director of Kochi University\n申請者  氏名\nApplicant’s Name\n□男  Male  □女  Female\n生年月日          年      月    日\nDate of Birth    Year   Month   Day\n国   籍\nNationality\n所属学部･研究科\nDepartment Major・Research Field\n□研究者  Researcher      □留学生  Student\n□単身 Single  □夫婦 Couple  □家族 Family\n指導又は受入教員  氏名\nAdvisor’s Name\n下記のとおり，高知大学国際交流会館に入館したいので，申請します。\nI hereby apply for admission to Kochi University International House.\n記\nDetails\n１．入居希望区分  □単身室  □夫婦室  □家族室\nDesired Room  Single Room  Double Room  Family Apartment\n２．入居希望期間    年   月   日から        年   月   日まで\nDesired Period of Residence at the House     from Year Month Day to Year Month Day\n３．同居家族  Accompanying Family Members\n氏      名  Name  生年月日  Date of Birth  性  別  Sex  関  係  Relationship\n４．渡日前の所属機関及び身分\nHome Department and Academic Status Before Arrival\n別記様式第２号（第９条関係）\n（Form  ２)\n入  居  期  間  延  長  申  請  書\nAPPLICATION FOR EXTENSION OF PERIOD OF RESIDENCE\n日付：    年   月   日\nDate：     Year  Month  Day\n高知大学国際交流会館長  殿\nTo: House Director of Kochi University\n氏     名\nName\n□研究者  Researcher      □留学生  Student\n下記のとおり，高知大学国際交流会館の入居期間を延長いたしたく許可くださるよう申請し\nます。\nI hereby apply for an extension of my period of residence in Kochi University International House as\nfollows:\n記\nDetails\n１．居室番号        第        号室\nRoom No.\n２．入居許可期間の最終日          年   月     日\nExpiration Date                  Year    Month    Day\n３．延長希望期間                           年        月      日から            年      月        日まで\nDesired Extension Period     from Year    Month    Day              to Year   Month    Day\n４．延長を希望する理由\nReason for Extension\n別記様式第３号（第 16 条関係）\n（Form  ３）\n退去 届\nNOTIFICATION  OF  DEPARTURE\n日付：    年   月   日\nDate：     Year  Month  Day\n高知大学国際交流会館長  殿\nTo：House Director of Kochi University\n氏  名\nName\n□研究者  Researcher   □留学生  Student\n下記のとおり，高知大学国際交流会館から退去しますので，届け出ます。\nI hereby notify you that I will move out of Kochi University International House as follows:\n記\nDetails\n１．居室番号        第        号室\nRoom No.\n２．退去期日             年   月   日\nDate of Departure                Year    Month    Day\n３．入居許可期間の最終日          年   月   日\nExpiration Date                 Year    Month    Day\n４．退去理由  １．入居許可の期間満了のため\nReason for Moving Out:  Expiration of the residence permit\n２．その他（理由を具体的に書くこと。）\nOther (Specify the reasons.)\n５．退去後の連絡先\nContact Address After Departure",
      "references_tables": []
    }
  ],
  "appended_tables": []
}
