tests/snapshots/corpus__高知大学学寮管理運営規則@高知大学学寮管理運営規則.pdf.snap
---
source: tests/corpus.rs
expression: doc
input_file: sources/高知大学学寮管理運営規則.pdf
---
{
  "title": "高知大学学寮管理運営規則",
  "enacted": "平成16年４月１日 規則第149号",
  "last_amended": "最終改正  令和８年１月28日規則第60号",
  "body": [
    {
      "type": "article",
      "number": {
        "article": 1,
        "branch": null
      },
      "title": "趣旨",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則は、高知大学学則第82条第２項の規定に基づき、高知大学南溟寮、日章寮、かつら寮及びときわ寮（以下「学寮」という。）の管理運営に関し必要な事項を定める。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 2,
        "branch": null
      },
      "title": "目的",
      "paragraphs": [
        {
          "number": 1,
          "text": "学寮は、本学の学生に勉学と良好な生活の環境を提供し、その修学を容易にすることを目的とする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 3,
        "branch": null
      },
      "title": "管理運営責任者等",
      "paragraphs": [
        {
          "number": 1,
          "text": "学寮の管理運営責任者、入寮可能者及び入寮定員は、次の表に定めるとおりとする。名   称  管理運営責任者  入寮可能者  入寮定員男子寮南溟寮  理事（教育担当）  学部学生・大学院学生  242人日章寮農林海洋科学部長",
          "items": []
        },
        {
          "number": 1,
          "text": "学部学生・大学院学生",
          "items": []
        },
        {
          "number": 2,
          "text": "愛媛大学大学院連合農学研究科学生のうち、本学研究科農林海洋科学専攻を担当する大学教員を主指導教員として配属された学生60人女子寮かつら寮  理事（教育担当）  学部学生・大学院学生   60人ときわ寮  理事（教育担当）  学部学生・大学院学生   80人",
          "items": []
        },
        {
          "number": 2,
          "text": "前項の規定にかかわらず、管理運営責任者は、当該学寮の入寮定員に欠員がある場合には、特別聴講学生、研究生等の外国人留学生を入寮可能者として取り扱うことができるものとする。",
          "items": []
        },
        {
          "number": 3,
          "text": "学寮の管理運営に関する基本的な事項については、高知大学学生支援委員会（以下「学生支援委員会」という。）で審議する。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 4,
        "branch": null
      },
      "title": "入寮願",
      "paragraphs": [
        {
          "number": 1,
          "text": "入寮を希望する学生は、所定の様式による入寮願に必要な書類を添えて、管理運営責任者に願い出るものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 5,
        "branch": null
      },
      "title": "入寮の選考及び許可",
      "paragraphs": [
        {
          "number": 1,
          "text": "入寮の選考及び許可は、管理運営責任者が行う。",
          "items": []
        },
        {
          "number": 2,
          "text": "入寮の許可期間は、最短修業年限終了の日を超えることができない。ただし、特別の理由がある場合には、入寮期間の延長を認めることがある。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 6,
        "branch": null
      },
      "title": "入寮の手続及び許可の取消し",
      "paragraphs": [
        {
          "number": 1,
          "text": "入寮を許可された学生は、指定された期間内に入寮の手続をしなければならない。",
          "items": []
        },
        {
          "number": 2,
          "text": "前項の学生が、指定された期間内に入寮の手続を完了しないとき、又は第４条に定める必要書類の内容に虚偽の事実が判明したときは、管理運営責任者は、速やかに当該入寮の許可を取り消すものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 7,
        "branch": null
      },
      "title": "寄宿料",
      "paragraphs": [
        {
          "number": 1,
          "text": "学寮に入寮した学生（以下「寮生」という。）は、国立大学法人高知大学における授業料等費用に関する規則に定める寄宿料を毎月所定の日までに出納主任の補助者に納入しなければならない。",
          "items": []
        },
        {
          "number": 2,
          "text": "入退寮の日が月の中途である場合にあっても、寄宿料は１か月分納入しなければならない。",
          "items": []
        },
        {
          "number": 3,
          "text": "休業期間中に係る寄宿料は、第１項の規定にかかわらず当該期間前の所定の日までに納入するものとする。",
          "items": []
        },
        {
          "number": 4,
          "text": "既納の寄宿料は、還付しない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 8,
        "branch": null
      },
      "title": "光熱水料等の経費の負担",
      "paragraphs": [
        {
          "number": 1,
          "text": "食費その他私生活に使用する光熱水料等の経費は、寮生の負担とする。",
          "items": []
        },
        {
          "number": 2,
          "text": "寮生は、前項の経費について、大学が定める額を毎月所定の日までに、管理運営責任者の指定する者に納めなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 9,
        "branch": null
      },
      "title": "施設の保全等",
      "paragraphs": [
        {
          "number": 1,
          "text": "寮生は、居室、共同施設その他学寮の施設を常に正常な状態に保全するとともに、次の各号に定める事項を守らなければならない。",
          "items": [
            {
              "number": 1,
              "text": "居室を居室以外の目的に使用しないこと。"
            },
            {
              "number": 2,
              "text": "許可なく居室に工作を加えないこと。"
            },
            {
              "number": 3,
              "text": "共同施設は、常に良好な状態で使用すること。"
            },
            {
              "number": 4,
              "text": "学寮における掲示、はり紙等は、所定の場所以外にはしないこと。"
            },
            {
              "number": 5,
              "text": "防火管理、保健衛生管理及び災害防止等に留意し、快適な環境の保持に努めること。"
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 10,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "施設及び設備等を故意又は過失により滅失、毀損又は汚染したときは、管理運営責任者の指示に従って速やかに修理し、又は原状回復に必要な経費を賠償しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 11,
        "branch": null
      },
      "title": "退寮",
      "paragraphs": [
        {
          "number": 1,
          "text": "退寮を希望する寮生は、事前に管理運営責任者に所定の様式による退寮願を提出し、その承認を受けなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 12,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "寮生が、次の各号の一に該当するときは、管理運営責任者は、速やかに退寮を命ずるものとする。",
          "items": [
            {
              "number": 1,
              "text": "本学学生の身分を失ったとき。"
            },
            {
              "number": 2,
              "text": "３か月以上寄宿料又は第８条に定める経費の納付を怠ったとき。"
            },
            {
              "number": 3,
              "text": "第５条第２項に定める入寮許可期間の終了後も居住しているとき。"
            }
          ]
        },
        {
          "number": 2,
          "text": "寮生が、次の各号の一に該当するときは、管理運営責任者は、学生支援委員会の議を経て、退寮を命ずることがある。",
          "items": [
            {
              "number": 1,
              "text": "停学処分を受けたとき。"
            },
            {
              "number": 2,
              "text": "長期にわたる休学又は留学等に該当するとき。"
            },
            {
              "number": 3,
              "text": "保健衛生上寮生活に適しないと認められるとき。"
            },
            {
              "number": 4,
              "text": "学寮において著しく風紀、秩序を乱す行為のあったとき。"
            },
            {
              "number": 5,
              "text": "その他学寮の管理運営上支障をきたす行為のあったとき。"
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 13,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "退寮の際は、居室その他居室に付属する設備等について管理運営責任者の指定する者の点検を受け、その指示に従わなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 14,
        "branch": null
      },
      "title": "寮生以外の者の宿泊",
      "paragraphs": [
        {
          "number": 1,
          "text": "学寮には、寮生以外の者を宿泊させてはならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 15,
        "branch": null
      },
      "title": "学寮生活の自主的規律",
      "paragraphs": [
        {
          "number": 1,
          "text": "寮生は、寮生活を自主的に規律するため、学寮ごとに規約を定めるものとする。",
          "items": []
        },
        {
          "number": 2,
          "text": "前項の規約を定めようとするとき、又は変更しようとするときは、管理運営責任者の承認を得なければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 16,
        "branch": null
      },
      "title": "懇談会の開催",
      "paragraphs": [
        {
          "number": 1,
          "text": "学寮における日常的、具体的な問題の対応について意見を交換し、関係教職員と寮生の相互理解を深めるため、管理運営責任者は適宜、懇談会を開催するものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 17,
        "branch": null
      },
      "title": "雑則",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則に定めるもののほか、必要な事項は、学生支援委員会の議を経て、管理運営責任者が定める。",
          "items": []
        }
      ]
    }
  ],
  "supplementary_provisions": [
    {
      "ordinal": 1,
      "heading_raw": "附  則",
      "raw_text": "この規則は、平成16年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 2,
      "heading_raw": "附  則（平成17年７月１日規則第545号）",
      "raw_text": "この規則は、平成17年７月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 3,
      "heading_raw": "附  則（平成20年３月26日規則第127号）",
      "raw_text": "この規則は、平成20年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 4,
      "heading_raw": "附  則（平成22年３月31日規則第124号）",
      "raw_text": "この規則は、平成22年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 5,
      "heading_raw": "附  則（平成28年３月18日規則第116号）",
      "raw_text": "この規則は、平成28年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 6,
      "heading_raw": "附  則（平成28年３月23日規則第118号）",
      "raw_text": "この規則は、平成28年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 7,
      "heading_raw": "附  則（平成30年３月28日規則第86号）",
      "raw_text": "この規則は、平成30年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 8,
      "heading_raw": "附  則（平成31年３月27日規則第100号）",
      "raw_text": "この規則は、平成31年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 9,
      "heading_raw": "附  則（平成31年４月26日規則第15号）",
      "raw_text": "この規則は、令和元年５月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 10,
      "heading_raw": "附  則（令和３年３月30日規則第68号）",
      "raw_text": "この規則は、令和３年３月30日から施行し、令和３年度入学生から適用する。",
      "references_tables": []
    },
    {
      "ordinal": 11,
      "heading_raw": "附  則（令和３年９月10日規則第20号）",
      "raw_text": "この規則は、令和３年 10 月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 12,
      "heading_raw": "附  則（令和６年３月28日規則第88号）",
      "raw_text": "この規則は、令和６年３月 28 日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 13,
      "heading_raw": "附  則（令和８年１月28日規則第60号）",
      "raw_text": "この規則は、令和８年１月 28 日から施行する。",
      "references_tables": []
    }
  ],
  "appended_tables": []
}
